--- a/puzzles_logic_app/templates/puzzles_logic_app/diet_problem_demo.html
+++ b/puzzles_logic_app/templates/puzzles_logic_app/diet_problem_demo.html
@@ -1,6 +1,6 @@
 {% extends "core/base.html" %}
 {% load static %}
-{% load routing_filters %}
+{% load production_filters %}
 
 {% block title %}The Diet Problem Demo{% endblock %}
 
@@ -120,6 +120,7 @@
     {% if success_message and not error_message %}
         <div class="alert alert-success" role="alert">{{ success_message }}</div>
     {% endif %}
+
     {% if results %}
         <div class="row">
             <div class="col-lg-6">
