1. sports scheduling demo temp

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -176,7 +176,7 @@
                                 <a class="nav-link {% if active_submenu == 'diet_problem_introduction' %}active{% endif %}" href="{% url 'puzzles_logic_app:diet_problem_introduction' %}">Introduction</a>
                             </li>
                             <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'Diet Problem Demo' %}active{% endif %}" href="{% url 'puzzles_logic_app:diet_problem_demo' %}">Demo (WIP)</a>
+                                <a class="nav-link {% if active_submenu == 'Diet Problem Demo' %}active{% endif %}" href="{% url 'puzzles_logic_app:diet_problem_demo' %}">Demo</a>
                             </li>
 
                             <li class="nav-item mt-2"><strong class="sidebar-subtitle">Sports Scheduling</strong></li>
@@ -184,7 +184,7 @@
                                 <a class="nav-link {% if active_submenu == 'sports_scheduling_introduction' %}active{% endif %}" href="{% url 'puzzles_logic_app:sports_scheduling_introduction' %}">Introduction</a>
                             </li>
                             <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'Sports Scheduling Demo' %}active{% endif %}" href="{% url 'puzzles_logic_app:sports_scheduling_demo' %}">Demo (WIP)</a>
+                                <a class="nav-link {% if active_submenu == 'Sports Scheduling Demo' %}active{% endif %}" href="{% url 'puzzles_logic_app:sports_scheduling_demo' %}">Demo</a>
                             </li>
 
                             <li class="nav-item mt-2"><strong class="sidebar-subtitle">Nurse Rostering</strong></li>
