--- a/puzzles_logic_app/templates/puzzles_logic_app/sports_scheduling_demo.html
+++ b/puzzles_logic_app/templates/puzzles_logic_app/sports_scheduling_demo.html
@@ -37,9 +37,9 @@
     <p>팀 수, 리그 방식, 최적화 목표를 선택하고 팀 이름을 입력하여 최적의 리그 대진표를 생성합니다.</p>
     <p>싱글 라운드 로빈은 모든 팀이 다른 모든 팀과 한 번씩 만나는 방식이고
         더블 라운드 로빈은 모든 팀이 다른 모든 팀과 홈&어웨이로 한 번씩 만나는 방식입니다. </p>
-    <p>Sports Scheduling은 대단히 복잡한 문제로 무료 Solver인 OR-tools로는 해결하는데 많은 시간이 필요합니다.<br>
-       Demo에서는 Gurobi 무료 버전을 이용하여 4팀까지 목적에 따른 완벽한 모델을 테스트 할 수 있습니다.<br>
-       5팀 부터는 무료 버전의 범위를 초과하기 때문에 간단한 모델로 변경하여 목적에 따른 결과가 완벽히 반영되지 않을 수 있습니다.</p>
+    <p>Sports Scheduling은 대단히 복잡한 문제로 무료 Solver인 OR-tools로는 해결하는데 어려움이 있습니다..<br>
+       4팀까지는 Sovler 항목에서 Gurobi를 선택하여 완벽한 모델을 테스트 할 수 있습니다.<br>
+       5팀 부터는 Gurobi 무료 버전의 범위를 초과하기 때문에 OR-tools와 동일한 간단한 모델 데모를 진행할 수 있습니다.</p>
 
     <div class="mb-3 form-inline">
         <div class="form-group mr-2">
