1. sudoku complete  - size  - random

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -208,7 +208,7 @@
                                 <a class="nav-link {% if active_submenu == 'sudoku_introduction' %}active{% endif %}" href="{% url 'puzzles_logic_app:sudoku_introduction' %}">Introduction</a>
                             </li>
                             <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'Sudoku Demo' %}active{% endif %}" href="{% url 'puzzles_logic_app:sudoku_demo' %}">Demo (WIP)</a>
+                                <a class="nav-link {% if active_submenu == 'Sudoku Demo' %}active{% endif %}" href="{% url 'puzzles_logic_app:sudoku_demo' %}">Demo</a>
                             </li>
                         {% endif %}
                     </ul>
