--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -74,6 +74,13 @@
                                 <a class="nav-link {% if active_submenu == 'Data Center Capacity Demo' %}active{% endif %}"
                                    href="{% url 'resource_allocation_app:data_center_capacity_demo' %}">Demo</a>
                             </li>
+                            <li class="nav-item mt-2"><strong class="sidebar-subtitle">Nurse Rostering</strong></li>
+                            <li class="nav-item nested">
+                                <a class="nav-link {% if active_submenu == 'nurse_rostering_introduction' %}active{% endif %}" href="{% url 'resource_allocation_app:nurse_rostering_introduction' %}">Introduction</a>
+                            </li>
+                            <li class="nav-item nested">
+                                <a class="nav-link {% if active_submenu == 'Nurse Rostering Demo' %}active{% endif %}" href="{% url 'resource_allocation_app:nurse_rostering_demo' %}">Demo (WIP)</a>
+                            </li>
 
 <!--                            <li class="nav-item mt-2"><strong class="sidebar-subtitle">financial Portfolio</strong></li>-->
 <!--                            <li class="nav-item nested">-->
@@ -186,21 +193,12 @@
                             <li class="nav-item nested">
                                 <a class="nav-link {% if active_submenu == 'Sports Scheduling Demo' %}active{% endif %}" href="{% url 'puzzles_logic_app:sports_scheduling_demo' %}">Demo</a>
                             </li>
-
-                            <li class="nav-item mt-2"><strong class="sidebar-subtitle">Nurse Rostering</strong></li>
-                            <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'nurse_rostering_introduction' %}active{% endif %}" href="{% url 'puzzles_logic_app:nurse_rostering_introduction' %}">Introduction</a>
-                            </li>
-                            <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'Nurse Rostering Demo' %}active{% endif %}" href="{% url 'puzzles_logic_app:nurse_rostering_demo' %}">Demo (WIP)</a>
-                            </li>
-
                             <li class="nav-item mt-2"><strong class="sidebar-subtitle">Traveling Salesman Problem (TSP)</strong></li>
                             <li class="nav-item nested">
                                 <a class="nav-link {% if active_submenu == 'tsp_introduction' %}active{% endif %}" href="{% url 'puzzles_logic_app:tsp_introduction' %}">Introduction</a>
                             </li>
                             <li class="nav-item nested">
-                                <a class="nav-link {% if active_submenu == 'TSP Demo' %}active{% endif %}" href="{% url 'puzzles_logic_app:tsp_demo' %}">Demo (WIP)</a>
+                                <a class="nav-link {% if active_submenu == 'TSP Demo' %}active{% endif %}" href="{% url 'puzzles_logic_app:tsp_demo' %}">Demo</a>
                             </li>
 
                             <li class="nav-item mt-2"><strong class="sidebar-subtitle">Sudoku Solver</strong></li>
