--- a/puzzles_logic_app/templates/puzzles_logic_app/tsp_demo.html
+++ b/puzzles_logic_app/templates/puzzles_logic_app/tsp_demo.html
@@ -1,6 +1,6 @@
 {% extends "core/base.html" %}
 {% load static %}
-{% load production_filters %}
+{% load puzzles_filters %}
 
 {% block title %}Traveling Salesperson Problem Demo{% endblock %}
 {% block styles %}
